RESOLVED FIXED258017
[css-nesting] Fix insertRule() on orphaned style rule
https://bugs.webkit.org/show_bug.cgi?id=258017
Summary [css-nesting] Fix insertRule() on orphaned style rule
Matthieu Dubet
Reported 2023-06-13 05:26:35 PDT
[css-nesting] Fix insertRule() on orphaned style rule
Attachments
Matthieu Dubet
Comment 1 2023-06-13 05:27:01 PDT
Matthieu Dubet
Comment 2 2023-06-13 05:45:02 PDT
Matthieu Dubet
Comment 3 2023-06-14 02:03:45 PDT
EWS
Comment 4 2023-06-14 08:22:31 PDT
Committed 265154@main (36514195098d): <https://commits.webkit.org/265154@main> Reviewed commits have been landed. Closing PR #14949 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.