Cherry-pick 36514195098d. rdar://problem/110629287

[CSSOM] Fix insertion of rule into orphaned style rule
    https://bugs.webkit.org/show_bug.cgi?id=258017
    rdar://110629287

    Reviewed by Antti Koivisto.

    When a StyleRule is orphaned, we don't need any specific mechanism (such as RuleMutationScope)
    and convert it directly to a StyleRuleWithNesting.

    * LayoutTests/fast/css/cssom-mutation-stylerule-expected.html: Added.
    * LayoutTests/fast/css/cssom-mutation-stylerule.html: Added.
    * Source/WebCore/css/CSSStyleRule.cpp:
    (WebCore::CSSStyleRule::insertRule):

    Canonical link: https://commits.webkit.org/265154@main
Identifier: 259548.836@safari-7615-branch